# vfs.vtp

./: CMakeLists.txt
src/: VTPFile.cpp  VTPSession.cpp  VTPSession.h
vfs.vtp/: addon.xml
vfs.vtp/resources/language/English/: strings.po
